--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
+lib_deps =
+  # RECOMMENDED
+  # Accept new functionality in a backwards compatible manner and patches
+  robtillaart/PCF8574 @ ^0.3.1
+  me-no-dev/AsyncTCP @ ^1.1.1
+  adafruit/Adafruit INA219 @ ^1.1.0
+  Wire
